--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ to your company throughout the duration of my training period. </p>
     </div>
     <footer class="footer">
       <div class="container text-center"></div>
-      <div class="h4 title text-center">Fhill Baliwag</div>
+      <div class="h4 title text-center">Aj Maglajos</div>
       <div class="text-center text-muted">
         
       </div>
